# clickhouse-rowbinary

./: .gitignore  Cargo.toml  README.md  USAGE.md  pyproject.toml  usage.md  validate.sh
.github/workflows/: ci.yml  release.yml  test-release.yml
crates/clickhouse_rowbinary/: Cargo.toml
crates/clickhouse_rowbinary_py/src/: errors.rs  lib.rs  reader.rs  row.rs  writer.rs
python/: README.md
python/clickhouse_rowbinary/: __init__.py
src/: error.rs  lib.rs  types.rs  value.rs
src/rowbinary/: mod.rs  reader.rs  value_rw.rs  writer.rs
tests/: main.rs
tests/common/: mod.rs
tests/composites/: dynamic.rs  map.rs  mod.rs  tuple.rs
tests/primitives/: bool.rs  date.rs  date32.rs  datetime.rs  datetime64.rs  decimal.rs  decimal128.rs  decimal256.rs  decimal32.rs  decimal64.rs  enum16.rs  enum8.rs  fixed_string.rs  float32.rs  float64.rs  int128.rs  int16.rs  int256.rs  int32.rs  int64.rs  int8.rs  ipv4.rs  ipv6.rs  mod.rs  string.rs  uint128.rs  uint16.rs  uint256.rs  uint32.rs  uint64.rs  uint8.rs  uuid.rs
tests/python/: conftest.py  test_reader.py  test_roundtrip.py  test_schema.py  test_seekable.py  test_types.py  test_writer.py
tests/rust/: main.rs
tests/rust/common/: mod.rs
tests/rust/composites/: dynamic.rs  json.rs  json_stress.rs  map.rs  nested.rs  tuple.rs  variant.rs
tests/rust/mixed/: mod.rs
tests/rust/mixed_composites/: mod.rs
tests/rust/mixed_json_composites/: mod.rs
tests/rust/primitives/: bfloat16.rs  bool.rs  date.rs  date32.rs  datetime.rs  datetime64.rs  decimal.rs  decimal128.rs  decimal256.rs  (+25 more)
tests/usage/: mod.rs  reuse.rs
(+6 files in other folders)
