[package]
name = "clickhouse_binary"
version = "0.1.0"
edition = "2024"
authors = ["Dov Reshef <reshef.dov@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "RowBinary encoder/decoder for ClickHouse"
readme = "README.md"
keywords = ["clickhouse", "rowbinary", "serialization", "encoding", "database"]
categories = ["encoding", "database", "parser-implementations"]
documentation = "https://docs.rs/clickhouse_binary"
repository = "https://github.com/dovreshef/clickhouse-binary"
exclude = [
    ".github/**/*",
]

[dependencies]
thiserror = "2.0"
uuid = { version = "1.19", features = ["std"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
serde_json = "1.0"
num-bigint = { version = "0.4", default-features = false, features = ["std"] }
num-traits = "0.2"
 
[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
ureq = "3.1"
urlencoding = "2.1"
serial_test = "3.2"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -2 }
